[package]
name = "bevy_rts_camera"
version = "0.8.1"
authors = ["Plonq"]
edition = "2021"
description = "An RTS-style camera for Bevy"
keywords = ["gamedev", "bevy", "rts", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonq/bevy_rts_camera"
homepage = "https://github.com/Plonq/bevy_rts_camera"
readme = "README.md"
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_render", "bevy_window", "bevy_picking", "bevy_mesh_picking_backend"] }

[dev-dependencies]
bevy = { version = "0.15" }
