[package]
name = "bevy_rts_camera"
version = "0.10.0"
authors = ["Plonq"]
edition = "2021"
description = "An RTS-style camera for Bevy"
keywords = ["gamedev", "bevy", "rts", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonq/bevy_rts_camera"
homepage = "https://github.com/Plonq/bevy_rts_camera"
readme = "README.md"
exclude = ["assets/"]

[features]
default = []
controller = ["leafwing-input-manager"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_window",
    "bevy_picking",
    "bevy_mesh_picking_backend",
] }
leafwing-input-manager = { version = "0.17.0", optional = true }


[dev-dependencies]
bevy = { version = "0.16" }
leafwing-input-manager = { version = "0.17.0" }

[[example]]
name = "basic"
required-features = ["controller"]

[[example]]
name = "advanced"
required-features = ["controller"]
